--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/InputOptions.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/InputOptions.xaml
@@ -13,7 +13,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
@@ -70,18 +69,15 @@
     <Label Grid.Column="3" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent}"  StringFormat="N2"/>
 
-    <Label Grid.Column="3" Grid.Row="4" >
-        <TextBlock>
+
+    <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
                 Ток вспомогательного<LineBreak/>питания 1, мА
-        </TextBlock>
-    </Label>
+    </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
 
-    <Label Grid.Column="3" Grid.Row="5" >
-        <TextBlock>
-                Ток вспомогательного<LineBreak/>питания 2, мА
+        <TextBlock  Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
+                Ток вспомогательного питания 2, мА
         </TextBlock>
-    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
     <Label Grid.Column="3" Grid.Row="6" Content="Ток входа макс, мА" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}"/>
