--- a/SCME.WpfControlLibrary/Pages/ImpulsePage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ImpulsePage.xaml
@@ -6,14 +6,16 @@
       xmlns:testParameters="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
       xmlns:properties="clr-namespace:SCME.WpfControlLibrary.Properties"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
-      
+      xmlns:myControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
       Title="ImpulsePage">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulsePageStyle.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
+         
         </ResourceDictionary>
     </Page.Resources>
     <Grid IsSharedSizeScope="True">
@@ -27,11 +29,11 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="1" HorizontalAlignment="Center" Margin="0,0,0,50">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-                <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+                <ColumnDefinition Width="*"  />
+                <ColumnDefinition Width="1.1*" />
                 <ColumnDefinition Width="30" />
-                <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-                <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="1.1*" />
             </Grid.ColumnDefinitions>
             <Label Content="Тип корпуса"/>
             <ComboBox Grid.Column="1"/>
@@ -40,19 +42,20 @@
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Height" Value="0"/>
+                    <Setter Property="BorderThickness" Value="0"/>
                 </Style>
             </TabControl.Resources>
             <TabItem>
-                <testParameters:InputOptionsTemplate HorizontalAlignment="Center" />
+                <testParameters:InputOptionsTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"   />
             </TabItem>
             <TabItem>
-                <testParameters:OutputResidualVoltage HorizontalAlignment="Center" />
+                <testParameters:OutputResidualVoltage DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
             <TabItem>
-                <testParameters:OutputLeakageCurrentTemplate HorizontalAlignment="Center" />
+                <testParameters:OutputLeakageCurrentTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
             <TabItem>
-                <testParameters:ProhibitionVoltageTemplate HorizontalAlignment="Center" />
+                <testParameters:ProhibitionVoltageTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
         </TabControl>
         <Grid Grid.Row="3" HorizontalAlignment="Center" Margin="0,50,0,0">
@@ -67,8 +70,16 @@
             <TextBlock Grid.Column="1" HorizontalAlignment="Right" Name="LabelValue" Text="0"/>
         </Grid>
 
-        <Button Grid.Row="5" HorizontalAlignment="Left" Content="{x:Static properties:Resources.Back}" Click="Back_Click" Background="#00A7FF" Height="80" Width="320"/>
-        <Button Grid.Row="5" HorizontalAlignment="Center" Content="{x:Static properties:Resources.Stop}" Background="#DF0101" Height="80" Width="320"/>
-        <Button Grid.Row="5" HorizontalAlignment="Left" Content="{x:Static properties:Resources.Start}" Background="#66DC00" Height="80" Width="320" Margin="960,0,0,0"/>
+        <Grid Grid.Row="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Content="{x:Static properties:Resources.Back}" Click="Back_Click" Background="{StaticResource BlueBrush}" Height="80" Margin="0,0,10,0" />
+            <Button Grid.Column="1" Content="{x:Static properties:Resources.Stop}" Background="{StaticResource xRed1}" Height="80" />
+            <Button Grid.Column="2" Content="{x:Static properties:Resources.Start}" Background="{StaticResource xGreen1}" Height="80"  Margin="10,0,0,0"/>
+        </Grid>
+        
     </Grid>
 </Page>
