--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -16,17 +16,17 @@
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml"/>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/NumericUpDown.xaml"/>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/DataTemplateForTestParameters.xaml"/>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ProfilePageStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
             <Grid >
             <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"  />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.1*" />
             <ColumnDefinition Width="30" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.1*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"></RowDefinition>
