--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
@@ -13,7 +13,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulseOverwrite.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
@@ -78,17 +77,13 @@
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage}"   StringFormat="N2"/>
 
-    <Label Grid.Column="3" Grid.Row="4" >
-        <TextBlock>
+        <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
                 Ток вспомогательного<LineBreak/>питания 1, мА
         </TextBlock>
-    </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
-    
-    <TextBlock Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
-        <TextBlock>
-                Ток вспомогательного<LineBreak/>питания 2, мА
-        </TextBlock>
+
+    <TextBlock  Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
+                Ток вспомогательного питания 2, мА
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
