--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -42,11 +42,11 @@
 
         <Label Grid.Column="0" Grid.Row="2" >
             <TextBlock TextWrapping="Wrap">
-                Тип комм. напряжения при измерении утечки</TextBlock>
+                Тип ком. напряж. при измер. утечки</TextBlock>
         </Label>
     <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Source={StaticResource ApplicationPolarityConstantSwitchingVoltage}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding ApplicationPolarityConstantSwitchingVoltage}"  />
 
-    <Label Grid.Column="0" Grid.Row="3" Content="Коммутируемый ток, мА" ></Label>
+    <Label Grid.Column="0" Grid.Row="3" Content="Ком. ток, мА" ></Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedAmperage}" StringFormat="N2"/>
 
     <TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
@@ -75,24 +75,24 @@
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent}"  StringFormat="N2"/>
 
     <Label Grid.Column="3" Grid.Row="2" >
-        <TextBlock TextWrapping="Wrap" Text="Полярность приложения пост. комм. напряжения"/>
+        <TextBlock TextWrapping="Wrap" Text="Полярность прил. пост. ком. напр."/>
     </Label>
     <ComboBox Grid.Column="4" Grid.Row="2" ItemsSource="{Binding Source={StaticResource PolarityDCSwitchingVoltageApplication}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding PolarityDCSwitchingVoltageApplication}"/>
 
 
     <Label Grid.Column="3" Grid.Row="3" >
-        <TextBlock Text="Коммутируем. напр., В" TextWrapping="Wrap"/>
+        <TextBlock Text="Ком. напр., В" TextWrapping="Wrap"/>
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage}"   StringFormat="N2"/>
 
 
     <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
-                Ток вспомогательного<LineBreak/>питания 1, мА
+                Ток вспом. питания 1, мА
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
 
     <TextBlock  Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
-                Ток вспомогательного питания 2, мА
+                Ток вспом. питания 2, мА
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
