--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
@@ -40,7 +40,7 @@
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage}" StringFormat="{}{0:N1}"/>
 
-    <Label Grid.Column="0" Grid.Row="3" Content="Коммутируемый ток, мА" ></Label>
+    <Label Grid.Column="0" Grid.Row="3" Content="Ком. ток, мА" ></Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedAmperage}" StringFormat="N2"/>
 
     <TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
@@ -80,29 +80,29 @@
 
     
     <Label Grid.Column="3" Grid.Row="2" >
-        <TextBlock TextWrapping="Wrap" Text="Полярность приложения пост. комм. напряжения"/>
+        <TextBlock TextWrapping="Wrap" Text="Полярность прил. пост. ком. напр."/>
     </Label>
     <ComboBox Grid.Column="4" Grid.Row="2" ItemsSource="{Binding Source={StaticResource PolarityDCSwitchingVoltageApplication}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding PolarityDCSwitchingVoltageApplication}" />
 
     <Label Grid.Column="3" Grid.Row="3" >
-        <TextBlock TextWrapping="Wrap">Коммутируем. напр., В</TextBlock>
+        <TextBlock TextWrapping="Wrap">Ком. напр., В</TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage}"   StringFormat="N2"/>
 
 
     <TextBlock Grid.Column="3" Grid.Row="4" TextWrapping="Wrap">
-                Ток вспомогательного<LineBreak/>питания 1, мА
+                Ток вспом. питания 1, мА
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4"   Value="{Binding AuxiliaryCurrentPowerSupply1}"   StringFormat="N2"/>
 
     <TextBlock  Grid.Column="3" Grid.Row="5" TextWrapping="Wrap">
-                Ток вспомогательного питания 2, мА
+                Ток вспом. питания 2, мА
     </TextBlock>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"   Value="{Binding AuxiliaryCurrentPowerSupply2}"   StringFormat="N2"/>
 
     <Label Grid.Column="3" Grid.Row="6" >
         <TextBlock>
-            Длительность импульса<LineBreak/>комм. тока, мкс
+            Длительность имп.<LineBreak/>комм. тока, мкс
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="6"   Value="{Binding SwitchingCurrentPulseDuration}" StringFormat="N2"/>
