--- a/SCME.WpfControlLibrary/Pages/ImpulsePage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ImpulsePage.xaml
@@ -6,8 +6,7 @@
       xmlns:testParameters="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
       xmlns:properties="clr-namespace:SCME.WpfControlLibrary.Properties"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
-      xmlns:myControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-      Title="ImpulsePage">
+      xmlns:myControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,7 +17,7 @@
          
         </ResourceDictionary>
     </Page.Resources>
-    <Grid IsSharedSizeScope="True">
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto" />
@@ -27,7 +26,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1" HorizontalAlignment="Center" Margin="0,0,0,50">
+        <Grid Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"  />
                 <ColumnDefinition Width="1.1*" />
@@ -38,7 +37,7 @@
             <Label Content="Тип корпуса"/>
             <ComboBox Grid.Column="1"/>
         </Grid>
-        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl">
+        <TabControl Grid.Row="2" Background="Transparent" Name="MainTabControl" BorderThickness="0">
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Height" Value="0"/>
@@ -58,27 +57,27 @@
                 <testParameters:ProhibitionVoltageTemplate DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM}"/>
             </TabItem>
         </TabControl>
-        <Grid Grid.Row="3" HorizontalAlignment="Center" Margin="0,50,0,0">
+        <Grid Grid.Row="3" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-                <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+                <ColumnDefinition Width="*"  />
+                <ColumnDefinition Width="1.1*" />
                 <ColumnDefinition Width="30" />
-                <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-                <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="1.1*" />
             </Grid.ColumnDefinitions>
             <TextBlock Name="TextBlockValueName" />
             <TextBlock Grid.Column="1" HorizontalAlignment="Right" Name="LabelValue" Text="0"/>
         </Grid>
 
-        <Grid Grid.Row="5">
+        <Grid Grid.Row="5" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Content="{x:Static properties:Resources.Back}" Click="Back_Click" Background="{StaticResource BlueBrush}" Height="80" Margin="0,0,10,0" />
-            <Button Grid.Column="1" Content="{x:Static properties:Resources.Stop}" Background="{StaticResource xRed1}" Height="80" />
-            <Button Grid.Column="2" Content="{x:Static properties:Resources.Start}" Background="{StaticResource xGreen1}" Height="80"  Margin="10,0,0,0"/>
+            <Button Style="{StaticResource BackButton}"  Margin="0,0,10,0"  Grid.Column="0" Content="Назад" Click="Back_Click"/>
+            <Button Style="{StaticResource StopButton}" IsEnabled="False" Margin="10,0,10,0" Grid.Column="1" Content="Стоп" />
+            <Button Style="{StaticResource StartButton}" IsEnabled="False" Margin="10,0,0,0" Grid.Column="2" Content="Старт" />
         </Grid>
         
     </Grid>
