--- a/SCME.WpfControlLibrary/Styles/ImpulsePageStyle.xaml
+++ b/SCME.WpfControlLibrary/Styles/ImpulsePageStyle.xaml
@@ -17,6 +17,17 @@
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="TextAlignment" Value="left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+    </Style>
+    
+    <Style TargetType="TextBlock" x:Key="DefaultTextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+        <!--<Setter Property="FontSize" Value="22"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="TextAlignment" Value="left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>-->
     </Style>
 
     <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
