--- a/SCME.UI/MainWindow.xaml
+++ b/SCME.UI/MainWindow.xaml
@@ -81,7 +81,7 @@
 
                 <Grid Grid.Row="0" Grid.Column="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="344"/>
+                        <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
@@ -91,10 +91,10 @@
                     <Label Grid.Column="0" Grid.Row="0"
                         Content="{Binding TopTitle}"
                        FontSize="28" 
-                       HorizontalAlignment="Left" Margin="107,0,0,0" Width="auto" 
+                       HorizontalAlignment="Left" Margin="107,0,20,0" Width="auto" 
                        VerticalContentAlignment="Center"/>
 
-                    <Label Grid.Column="1" Grid.Row="0"
+                    <Label Grid.Column="1" Grid.Row="0" 
                        Name="deviceLable" Content="{Binding MmeCode}"
                        FontSize="28" Margin="0,0,0,0"
                        HorizontalAlignment="Left" />
@@ -145,7 +145,7 @@
                             <Button Background="Transparent" BorderThickness="0">
                                 <StackPanel >
                                     <Path  Width="55" Height="48" Stretch="uniform" Data="M 1 50 L 56.57894897460938 50 L 28.78947448730469 2 L 1 50 Z M 31.31578826904297 42.42105102539063 L 26.26315689086914 42.42105102539063 L 26.26315689086914 37.3684196472168 L 31.31578826904297 37.3684196472168 L 31.31578826904297 42.42105102539063 Z M 31.31578826904297 32.31578826904297 L 26.26315689086914 32.31578826904297 L 26.26315689086914 22.21052742004395 L 31.31578826904297 22.21052742004395 Z" Fill="#ffe6952a" Stroke="Transparent" Canvas.Left="0" Canvas.Top="0"  />
-                                    <TextBlock Text="Внутр*" HorizontalAlignment="Center" FontSize="10" />
+                                    <TextBlock Text="Внутр." HorizontalAlignment="Center" FontSize="10" />
                                 </StackPanel>
                             </Button>
                         </StackPanel>
