--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -78,7 +78,7 @@
             <RowDefinition Height="90" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="30*" />
-            <RowDefinition Height="94" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <Button x:Name="OperatorButton" CommandParameter="{x:Static types:UserWorkMode.Operator}" Grid.Column="2" Grid.Row="1" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
@@ -108,6 +108,6 @@
             </Grid>
         </Button>
 
-        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="7" Style="{StaticResource CButtonStyle}" Content="{x:Static res:Resources.Back}" Click="BackButton_Click"/>
+        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="7" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Back}" Click="BackButton_Click"/>
     </Grid>
 </Page>
